--- a/templates/jobs/rabbitmq/deploy.j2
+++ b/templates/jobs/rabbitmq/deploy.j2
@@ -40,4 +40,4 @@ spec:
       volumes:
       - name: jobs-rabbitmq-data
         persistentVolumeClaim:
-          claimName: {{service_param["rabbitmq_pvc"]}}
+          claimName: {{jobs_rabbitmq_pvc}}
