--- a/templates/security/postgres/deploy.j2
+++ b/templates/security/postgres/deploy.j2
@@ -31,4 +31,4 @@ spec:
       volumes:
       - name: sk-pg-data
         persistentVolumeClaim:
-          claimName: {{service_param["postgres_pvc"]}}
+          claimName: {{security_postgres_pvc}}
