--- a/templates/skadmin/initialLoad/tapis-abaco-secrets.j2
+++ b/templates/skadmin/initialLoad/tapis-abaco-secrets.j2
@@ -2,7 +2,7 @@
     "secrets": {
         "servicepwd":[
             {
-                "tenant":     "{{universal_param["service_tenant_id"]}}",
+                "tenant":     "{{skadmin_service_tenant_id}}",
                 "user":       "abaco",
                 "secretName": "password",
                 "password":   "<generate-secret>",
@@ -12,7 +12,7 @@
         ],
         "dbcredential":[
             {
-                "tenant":     "{{universal_param["service_tenant_id"]}}",
+                "tenant":     "{{skadmin_service_tenant_id}}",
                 "user":       "abaco",
                 "secretName": "passwords",
                 "dbservice":  "rabbitmq",
@@ -23,7 +23,7 @@
                 "kubeSecretKey":  "rabbitmq-password"
             },
             {
-                "tenant":     "{{universal_param["service_tenant_id"]}}",
+                "tenant":     "{{skadmin_service_tenant_id}}",
                 "user":       "abaco",
                 "secretName": "passwords",
                 "dbservice":  "mongo",
