--- a/templates/skadmin/initialLoad/tapis-monitoring-secrets.j2
+++ b/templates/skadmin/initialLoad/tapis-monitoring-secrets.j2
@@ -2,7 +2,7 @@
     "secrets": {
         "user":[
             {
-                "tenant":     "{{universal_param["service_tenant_id"]}}",
+                "tenant":     "{{skadmin_service_tenant_id}}",
                 "user":       "grafana-admin",
                 "secretName": "secrets",
                 "key":        "grafana-password",
@@ -10,9 +10,9 @@
                 "kubeSecretName": "tapis-monitoring-secrets",
                 "kubeSecretKey":  "grafana-password"
             },
-            {% if local_param["passwords"]%}
+            {% if skadmin_passwords %}
             {
-                "tenant":     "{{universal_param["service_tenant_id"]}}",
+                "tenant":     "{{skadmin_service_tenant_id}}",
                 "user":       "grafana-admin",
                 "secretName": "postgres-ro-password",
                 "key":        "password",
@@ -21,7 +21,7 @@
                 "kubeSecretKey":  "postgres-ro-password"
             },
             {
-                "tenant":     "{{universal_param["service_tenant_id"]}}",
+                "tenant":     "{{skadmin_service_tenant_id}}",
                 "user":       "grafana-admin",
                 "secretName": "thanos-s3-secret-key",
                 "key":        "password",
