--- a/templates/skadmin/initialLoad/tapis-tokens-secrets.j2
+++ b/templates/skadmin/initialLoad/tapis-tokens-secrets.j2
@@ -1,14 +1,14 @@
 {
     "secrets": {
         "jwtsigning":[
-            {% for tenant in local_param["tenants"]%}
+            {% for tenant in skadmin_tenants %}
             {
-                "tenant":     "{{tenant}}",
+                "tenant":     "{{skadmin_tenant}}",
                 "user":       "bozo",
                 "secretName": "keys",
                 "privateKey": "<generate-secret>",
                 "kubeSecretName": "tapis-tokens-secrets",
-                "kubeSecretKey":  "{{tenant}}-privatekey"
+                "kubeSecretKey":  "{{skadmin_tenant}}-privatekey"
             }{%-if not loop.last-%},{% endif %}
             {% endfor%}
         ]
