--- a/templates/skadmin/renew-sk-secret/renew-sk-secret-script.j2
+++ b/templates/skadmin/renew-sk-secret/renew-sk-secret-script.j2
@@ -3,8 +3,8 @@
 export KUBE_TOKEN=`cat /var/run/secrets/kubernetes.io/serviceaccount/token`
 export KUBE_NAMESPACE=`cat /var/run/secrets/kubernetes.io/serviceaccount/namespace`
 
-VAULT_SECRETID=`curl -s -X POST -H "X-Vault-Token: $VAULT_TOKEN" {{universal_param["vault_url"]}}/v1/auth/approle/role/sk/secret-id | jq -r .data.secret_id`
-VAULT_ROLEID=`curl -s -X GET -H "X-Vault-Token: $VAULT_TOKEN" {{universal_param["vault_url"]}}/v1/auth/approle/role/sk/role-id | jq -r .data.role_id`
+VAULT_SECRETID=`curl -s -X POST -H "X-Vault-Token: $VAULT_TOKEN" {{skadmin_vault_url}}/v1/auth/approle/role/sk/secret-id | jq -r .data.secret_id`
+VAULT_ROLEID=`curl -s -X GET -H "X-Vault-Token: $VAULT_TOKEN" {{skadmin_vault_url}}/v1/auth/approle/role/sk/role-id | jq -r .data.role_id`
 
 kubectl delete secret tapis-sk-vault-secrets
 kubectl create secret generic tapis-sk-vault-secrets --from-literal=vault-secretid=$VAULT_SECRETID --from-literal=vault-roleid=$VAULT_ROLEID
