--- a/templates/skadmin/renew-sk-secret/renew-sk-secret.j2
+++ b/templates/skadmin/renew-sk-secret/renew-sk-secret.j2
@@ -13,7 +13,7 @@ spec:
         command: ["/tmp/renew-sk-secret-script"]
         #command: ["sleep","3600"]
         image: mrghort/skadminutil:latest
-        {% if local_param["image_pull"]%}
+        {% if skadmin_image_pull %}
         imagePullPolicy: Always
         {% endif %}
         env:
