--- a/templates/skadmin/util.j2
+++ b/templates/skadmin/util.j2
@@ -8,5 +8,5 @@ spec:
   - name: skadmin-util
     command: ["sleep","3600"]
     #command: ["/tmp/run-sk-admin"]
-    image: mrghort/skadminutil:{{local_param["image_version"]}}
+    image: mrghort/skadminutil:latest
 
