--- a/templates/apps/apps-config.j2
+++ b/templates/apps/apps-config.j2
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata: 
   name: apps-config
 data:
-  "service_site_url": "{{universal_param["service_url"]}}"
-  "service_tenant_id": "{{universal_param["service_tenant_id"]}}"
-  "site_id": "{{universal_param["service_site_id"]}}"
-  "service_name": "{{service_param["service_name"]}}"
+  "service_site_url": "{{apps_service_url}}"
+  "service_tenant_id": "{{apps_service_tenant_id}}"
+  "site_id": "{{apps_service_site_id}}"
+  "service_name": "{{apps_service_name}}"
