--- a/templates/apps/postgres/deploy.j2
+++ b/templates/apps/postgres/deploy.j2
@@ -31,4 +31,4 @@ spec:
       volumes:
       - name: apps-pg-data
         persistentVolumeClaim:
-          claimName: {{service_param["postgres_pvc"]}}
+          claimName: {{apps_postgres_pvc}}
