--- a/templates/apps/postgres/service.j2
+++ b/templates/apps/postgres/service.j2
@@ -26,7 +26,7 @@ spec:
     port: 80
     targetPort: 80
 
-{% if local_param["apps-external"] == true%}
+{% if apps_apps-external == true %}
 ---
 apiVersion: v1
 kind: Service
