--- a/templates/files/configmap.j2
+++ b/templates/files/configmap.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 metadata:
   name: files-environment-vars
 data:
-  {% if local_param["log_leve"] == true%}
+  {% if files_log_leve == true %}
   LOG_LEVEL: info
   {%endif%}
   DB_HOST: files-postgres
@@ -12,7 +12,7 @@ data:
   POSTGRES_USER: tapisfiles
   RABBITMQ_DEFAULT_USER: tapisfiles
   RABBITMQ_DEFAULT_VHOST: tapisfiles
-  RABBITMQ_HOSTNAME: {{local_param["rabbitmq_hostname"]}}
+  RABBITMQ_HOSTNAME: {{files_rabbitmq_hostname}}
   RABBITMQ_USERNAME: tapisfiles
   RABBITMQ_VHOST: tapisfiles
 kind: ConfigMap
