--- a/templates/files/pvc.j2
+++ b/templates/files/pvc.j2
@@ -8,7 +8,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: {{universal_param["storage_class"]}}
+  storageClassName: {{files_storage_class}}
   resources:
     requests:
       storage: 10G
