--- a/templates/files/workers.j2
+++ b/templates/files/workers.j2
@@ -6,7 +6,7 @@ metadata:
     app: files-workers
   name: files-workers
 spec:
-  replicas: {{local_param["replicas"]|default(defaults["replicas"])}}
+  replicas: {{files_replicas)}}
   selector:
     matchLabels:
       app: files-workers
@@ -24,7 +24,7 @@ spec:
             - configMapRef:
                 name: files-environment-vars
           env:
-            {% if local_param["node_name"] == true%}
+            {% if files_node_name == true %}
             - name: TAPIS_LOCAL_NODE_NAME
               valueFrom:
                 fieldRef:
@@ -60,15 +60,15 @@ spec:
                 secretKeyRef:
                   name: tapis-files-secrets
                   key: service-password
-          image: tapis/tapis-files-workers:{{local_param["image_version"]|default(service_param["image_version"]|default(universal_param["image_version"]))}}
-          {% if local_param["memory"]%}
+          image: tapis/tapis-files-workers:{{files_image_version}}
+          {% if files_memory %}
           resources:
             requests:
-              memory: "{{local_param["memory"]}}"
+              memory: "{{files_memory}}"
           {% endif%}
           imagePullPolicy: Always
           name: files-workers
-          command: {{local_param["commands"]|replace("'", "\"")}} 
+          command: {{files_commands|replace("'", "\"")}} 
           {#resources: { }#}
           stdin: true
           tty: true
