--- a/templates/jobs/api/api.j2
+++ b/templates/jobs/api/api.j2
@@ -13,18 +13,18 @@ spec:
     spec:
       initContainers:
       automountServiceAccountToken: false
-      {% if local_param["node_selector"] == true%}
+      {% if jobs_node_selector == true %}
       nodeSelector:
         exempt: "yes"
       {% endif %}
       containers:
       - name: jobs-api
-        image: tapis/jobsapi:{{local_param["image_version"]|default(service_param["image_version"]|default(universal_param["image_version"]))}}
+        image: tapis/jobsapi:{{jobs_image_version}}
         imagePullPolicy: Always
-        {% if local_param["memory"]%}
+        {% if jobs_memory %}
         resources:
           requests:
-            memory: "{{local_param["memory"]}}"
+            memory: "{{jobs_memory}}"
         {% endif%}
         ports:
         - name: tomcat1
@@ -36,7 +36,7 @@ spec:
         - name: debug
           containerPort: 6157
         env:
-        {% if local_param["node_name"] == true%}
+        {% if jobs_node_name == true %}
         - name: tapis.local.node.name
           valueFrom:
             fieldRef:
