--- a/templates/jobs/postgres/deploy.j2
+++ b/templates/jobs/postgres/deploy.j2
@@ -31,4 +31,4 @@ spec:
       volumes:
       - name: jobs-pg-data
         persistentVolumeClaim:
-          claimName: {{service_param["postgres_pvc"]}}
+          claimName: {{jobs_postgres_pvc}}
