--- a/templates/jobs/workers/jobwkr-DefaultQueue.j2
+++ b/templates/jobs/workers/jobwkr-DefaultQueue.j2
@@ -13,21 +13,21 @@ spec:
     spec:
       initContainers:
       automountServiceAccountToken: false
-      {% if local_param["node_selector"] == true%}
+      {% if jobs_node_selector == true %}
       nodeSelector:
         exempt: "yes"
       {% endif%}
       containers:
       - name: jobs-wkr-defaultqueue
-        image: tapis/jobsworker:{{local_param["image_version"]|default(service_param["image_version"]|default(universal_param["image_version"]))}}
+        image: tapis/jobsworker:{{jobs_image_version}}
         imagePullPolicy: Always
-        {% if local_param["memory"]%}
+        {% if jobs_memory%}
         resources:
           requests:
-            memory: "{{local_param["memory"]}}"
+            memory: "{{jobs_memory}}"
         {% endif%}
         env:
-        {% if local_param["node_name"] == true%}
+        {% if jobs_node_name == true %}
         - name: tapis.local.node.name
           valueFrom:
             fieldRef:
