--- a/templates/meta/backup/mongo-backup-deployment.j2
+++ b/templates/meta/backup/mongo-backup-deployment.j2
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
         - name: mongo-backup
-          image: tapis/mongobackup:{{local_param["image_version"]|default(service_param["image_version"]|default(universal_param["image_version"]|default("0.1")))}}
+          image: tapis/mongobackup:{{meta_image_version}}
           imagePullPolicy: Always
           command: ["/bin/bash"]
           args: ["-c", "/scripts/script.sh && cron && tail -f /var/log/cron.log"]
@@ -36,9 +36,9 @@ spec:
             - name: MONGO_INITDB_ROOT_USERNAME
               value: restheart
           volumeMounts:
-            - name: {{service_param["mongo_backup_pvc"]}}
+            - name: {{meta_mongo_backup_pvc}}
               mountPath: /backup/
       volumes:
-        - name: {{service_param["mongo_backup_pvc"]}}
+        - name: {{meta_mongo_backup_pvc}}
           persistentVolumeClaim:
             claimName: mongo-backup-claim0
