--- a/templates/meta/backup/pbm/pbm.j2
+++ b/templates/meta/backup/pbm/pbm.j2
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
         - name: meta-pbm
-          image: tapis/mongodb-backup:{{local_param["image_version"]|default(service_param["image_version"]|default(universal_param["image_version"]|default("latest")))}}
+          image: tapis/mongodb-backup:{{meta_image_version|default("latest")))}}
           imagePullPolicy: Always
           env:
             - name: PBM_MONGODB_URI
