--- a/templates/meta/meta-config.j2
+++ b/templates/meta/meta-config.j2
@@ -3,10 +3,10 @@ kind: ConfigMap
 metadata: 
   name: meta-config
 data:
-  "service_site_url": "{{universal_param["service_url"]}}"
-  "service_tenant_id": "{{universal_param["service_tenant_id"]}}"
-  "site_id": "{{universal_param["service_site_id"]}}"
-  "service_name": "{{service_param["service_name"]}}"
+  "service_site_url": "{{meta_service_url}}"
+  "service_tenant_id": "{{meta_service_tenant_id}}"
+  "site_id": "{{meta_service_site_id}}"
+  "service_name": "{{meta_service_name}}"
   
   restheart-server-config.properties: |-
     ## RESTHeart Configuration - development properties.
