--- a/templates/meta/mongo/pvc.j2
+++ b/templates/meta/mongo/pvc.j2
@@ -1,11 +1,11 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: {{service_param["restheart_mongo_pvc"]}}
+  name: {{meta_restheart_mongo_pvc}}
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: {{universal_param["storage_class"]}}
+  storageClassName: {{meta_storage_class}}
   resources:
     requests:
       storage: 10Gi
@@ -35,5 +35,5 @@ spec:
       volumes:
       - name: restheart-mongo-data
         persistentVolumeClaim:
-          claimName: {{service_param["restheart_mongo_pvc"]}}
+          claimName: {{meta_restheart_mongo_pvc}}
 
