--- a/templates/notifications/notifications-config.j2
+++ b/templates/notifications/notifications-config.j2
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata: 
   name: notifications-config
 data:
-  "service_site_url": "{{universal_param["service_url"]}}"
-  "service_tenant_id": "{{universal_param["service_tenant_id"]}}"
-  "site_id": "{{universal_param["service_site_id"]}}"
-  "service_name": "{{service_param["service_name"]}}"
+  "service_site_url": "{{notifications_service_url}}"
+  "service_tenant_id": "{{notifications_service_tenant_id}}"
+  "site_id": "{{notifications_service_site_id}}"
+  "service_name": "{{notifications_service_name}}"
