--- a/templates/security/api/api.j2
+++ b/templates/security/api/api.j2
@@ -11,11 +11,11 @@ spec:
       labels:
         app: sk-api
     spec:
-      {% if local_param["auto_service"]%}
-      automountServiceAccountToken: {{local_param["auto_service"]}}
+      {% if security_auto_service %}
+      automountServiceAccountToken: {{security_auto_service}}
       {% endif %}
       initContainers:
-      {% if local_param["renew_sk"]%}
+      {% if security_renew_sk %}
       - name: renew-sk-secret
         command: ["/tmp/renew-sk-secret-script"]
         #command: ["sleep","3600"]
@@ -34,12 +34,12 @@ spec:
       {% endif %}
       containers:
       - name: sk-api
-        image: tapis/securityapi:{{local_param["image_version"]|default(service_param["image_version"]|default(universal_param["image_version"]))}}
+        image: tapis/securityapi:{{security_image_version}}
         imagePullPolicy: Always
-        {% if local_param["memory"]%}
+        {% if security_memory %}
         resources:
           requests:
-            memory: "{{local_param["memory"]}}"
+            memory: "{{security_memory}}"
         {% endif%}
         ports:
         - name: tomcat1
@@ -64,7 +64,7 @@ spec:
         - name: tapis.sk.vault.disable
           value: "false"
         - name: tapis.sk.vault.address
-          value: "{{universal_param["vault_url"]}}"
+          value: "{{security_vault_url}}"
         - name: tapis.sk.vault.secretid
           valueFrom:
             secretKeyRef:
@@ -93,8 +93,8 @@ spec:
 #        - name: tapis.log.directory
 #          value: "/opt/tomcat/logs"
         - name: CATALINA_OPTS 
-          value: "-Xms{{local_param["min"]}}g -Xmx{{local_param["max"]}}g -agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=n -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=6157 -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.ssl.need.client.auth=false -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.rmi.port=6157 -Djava.rmi.server.hostname=sk-api-debug -Dcom.sun.management.jmxremote.local.only=false"
-      {% if local_param["volumes"]%}
+          value: "-Xms{{security_heap_min}}g -Xmx{{security_heap_max}}g -agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=n -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=6157 -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.ssl.need.client.auth=false -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.rmi.port=6157 -Djava.rmi.server.hostname=sk-api-debug -Dcom.sun.management.jmxremote.local.only=false"
+      {% if security_volumes %}
       volumes:
       - name: renew-sk-secret
         configMap:
