--- a/templates/security/security-kernel-config.j2
+++ b/templates/security/security-kernel-config.j2
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata: 
   name: security-kernel-config
 data:
-  "service_site_url": "{{universal_param["service_url"]}}"
-  "service_tenant_id": "{{universal_param["service_tenant_id"]}}"
-  "site_id": "{{universal_param["service_site_id"]}}"
-  "service_name": "{{service_param["service_name"]}}"
+  "service_site_url": "{{security_service_url}}"
+  "service_tenant_id": "{{security_service_tenant_id}}"
+  "site_id": "{{security_service_site_id}}"
+  "service_name": "{{security_service_name}}"
