--- a/templates/skadmin/initialLoad/tapis-authenticator-secrets.j2
+++ b/templates/skadmin/initialLoad/tapis-authenticator-secrets.j2
@@ -2,7 +2,7 @@
     "secrets": {
         "servicepwd":[
             {
-                "tenant":     "{{universal_param["service_tenant_id"]}}",
+                "tenant":     "{{skadmin_service_tenant_id}}",
                 "user":       "authenticator",
                 "secretName": "password",
                 "password":   "<generate-secret>",
@@ -12,7 +12,7 @@
         ],
         "user":[
             {
-                "tenant":     "{{universal_param["service_tenant_id"]}}",
+                "tenant":     "{{skadmin_service_tenant_id}}",
                 "user":       "authenticator",
                 "secretName": "ldap.tapis-dev",
                 "key":        "password",
@@ -23,7 +23,7 @@
         ],
         "dbcredential":[
             {
-                "tenant":     "{{universal_param["service_tenant_id"]}}",
+                "tenant":     "{{skadmin_service_tenant_id}}",
                 "user":       "authenticator",
                 "secretName": "passwords",
                 "dbservice":  "postgres",
