--- a/templates/skadmin/initialLoad/tapis-pgrest-secrets.j2
+++ b/templates/skadmin/initialLoad/tapis-pgrest-secrets.j2
@@ -2,7 +2,7 @@
     "secrets": {
         "servicepwd":[
             {
-                "tenant":     "{{universal_param["service_tenant_id"]}}",
+                "tenant":     "{{skadmin_service_tenant_id}}",
                 "user":       "pgrest",
                 "secretName": "password",
                 "password":   "<generate-secret>",
@@ -12,7 +12,7 @@
         ],
         "dbcredential":[
             {
-                "tenant":     "{{universal_param["service_tenant_id"]}}",
+                "tenant":     "{{skadmin_service_tenant_id}}",
                 "user":       "pgrest",
                 "secretName": "passwords",
                 "dbservice":  "postgres",
@@ -23,7 +23,7 @@
                 "kubeSecretKey":  "kubernetes-postgres"
             },
             {
-                "tenant":     "{{universal_param["service_tenant_id"]}}",
+                "tenant":     "{{skadmin_service_tenant_id}}",
                 "user":       "postgres",
                 "secretName": "passwords",
                 "dbservice":  "postgres",
@@ -34,7 +34,7 @@
                 "kubeSecretKey":  "postgres-password"
             },
             {
-                "tenant":     "{{universal_param["service_tenant_id"]}}",
+                "tenant":     "{{skadmin_service_tenant_id}}",
                 "user":       "wow",
                 "secretName": "passwords",
                 "dbservice":  "pgadmin",
