--- a/templates/skadmin/sk-admin-init.j2
+++ b/templates/skadmin/sk-admin-init.j2
@@ -12,7 +12,7 @@ spec:
       - name: sk-admin-init
         #command: ["sleep","3600"]
         command: ["/tmp/run-sk-admin"]
-        image: tapis/securityadmin:{{local_param["image_version"]|default(service_param["image_version"]|default(universal_param["image_version"]))}}
+        image: tapis/securityadmin:{{skadmin_image_version}}
         imagePullPolicy: Always
         env:
         #- name: KUBE_TOKEN
@@ -30,7 +30,7 @@ spec:
               name: tapis-sk-vault-secrets
               key: vault-secretid
         #- name: SKADMIN_PARMS
-        #  value: "-c -i /tmp/initialLoad -vr VAULT_ROLEID -vs VAULT_SECRETID -b {{universal_param["vault_url"]}} -kt KUBE_TOKEN -kn KUBE_NAMEPSACE -ku https://kubernetes.default.svc.cluster.local"
+        #  value: "-c -i /tmp/initialLoad -vr VAULT_ROLEID -vs VAULT_SECRETID -b {{skadmin_vault_url}} -kt KUBE_TOKEN -kn KUBE_NAMEPSACE -ku https://kubernetes.default.svc.cluster.local"
         volumeMounts:
         - name: initialload
           mountPath: /tmp/initialLoad
