--- a/templates/skadmin/skadmin-config.j2
+++ b/templates/skadmin/skadmin-config.j2
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata: 
   name: skadmin-config
 data:
-  "service_site_url": "{{universal_param["service_url"]}}"
-  "service_tenant_id": "{{universal_param["service_tenant_id"]}}"
-  "site_id": "{{universal_param["service_site_id"]}}"
-  "service_name": "{{service_param["service_name"]}}"
+  "service_site_url": "{{skadmin_service_url}}"
+  "service_tenant_id": "{{skadmin_service_tenant_id}}"
+  "site_id": "{{skadmin_service_site_id}}"
+  "service_name": "{{skadmin_service_name}}"
