--- a/templates/systems/systems-config.j2
+++ b/templates/systems/systems-config.j2
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata: 
   name: systems-config
 data:
-  "service_site_url": "{{universal_param["service_url"]}}"
-  "service_tenant_id": "{{universal_param["service_tenant_id"]}}"
-  "site_id": "{{universal_param["service_site_id"]}}"
-  "service_name": "{{service_param["service_name"]}}"
+  "service_site_url": "{{systems_service_url}}"
+  "service_tenant_id": "{{systems_service_tenant_id}}"
+  "site_id": "{{systems_service_site_id}}"
+  "service_name": "{{systems_service_name}}"
