--- a/templates/files/workers.j2
+++ b/templates/files/workers.j2
@@ -6,7 +6,7 @@ metadata:
     app: files-workers
   name: files-workers
 spec:
-  replicas: {{files_replicas)}}
+  replicas: {{files_replicas}}
   selector:
     matchLabels:
       app: files-workers
